--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="register">Register</string>
     <string name="signup">SignUp</string>
     <string name="logout">Logout</string>
+    <string name="crypto">crypto</string>
+    <string name="explore">Explore</string>
 </resources>
