--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="symbol">Symbol</string>
     <string name="name">Name</string>
     <string name="rate">Rate</string>
+    <string name="googlepay_button_content_description">GooglePay</string>
 </resources>
