--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="name">Name</string>
     <string name="rate">Rate</string>
     <string name="googlepay_button_content_description">GooglePay</string>
+    <string name="finance">Finance</string>
 </resources>
